--- a/code-review-cli/Fine_tuning/CodeLLama_Finetuning_CyberNative.ipynb
+++ b/code-review-cli/Fine_tuning/CodeLLama_Finetuning_CyberNative.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNqXRh0J2vLfiUNuYh6F7A9",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/RO-HIT17/CodeReview-Kuriyam/blob/main/CodeLLama_Finetuning_CyberNative.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -47,6 +31,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OdewTKOhEvrk"
+      },
+      "outputs": [],
       "source": [
         "from unsloth import FastLanguageModel\n",
         "import torch\n",
@@ -74,15 +63,15 @@
         "    load_in_4bit = load_in_4bit,\n",
         "\n",
         ")"
-      ],
-      "metadata": {
-        "id": "OdewTKOhEvrk"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Pk2ItnY6FAd_"
+      },
+      "outputs": [],
       "source": [
         "model = FastLanguageModel.get_peft_model(\n",
         "    model,\n",
@@ -98,30 +87,33 @@
         "    use_rslora = False,\n",
         "    loftq_config = None,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "Pk2ItnY6FAd_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HPSJtt_1FJdg"
+      },
+      "outputs": [],
       "source": [
         "!pip install -U datasets\n",
         "from datasets import load_dataset\n",
         "dataset = load_dataset(\"CyberNative/Code_Vulnerability_Security_DPO\", split=\"train\")\n",
         "print(dataset.column_names)"
-      ],
-      "metadata": {
-        "id": "HPSJtt_1FJdg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uF35vaFZPrVX"
+      },
+      "outputs": [],
       "source": [
+        "from unsloth import to_sharegpt, standardize_sharegpt, apply_chat_template\n",
+        "\n",
+        "# Step 1: Merge columns into prompt/response format\n",
         "dataset = to_sharegpt(\n",
         "    dataset,\n",
         "    merged_prompt=(\n",
@@ -135,31 +127,42 @@
         "    conversation_extension=3\n",
         ")\n",
         "\n",
-        "\n",
+        "# Step 2: Convert to 'INPUT' and 'OUTPUT' columns\n",
         "dataset = standardize_sharegpt(dataset)\n",
         "\n",
+        "# Step 3: Filter out invalid rows\n",
+        "\n",
+        "# ✅ Step 4: Use properly formatted chat_template\n",
         "chat_template = \"\"\"USER:\n",
         "{INPUT}\n",
         "\n",
         "ASSISTANT:\n",
-        "{OUTPUT}\"\"\"\n",
+        "{OUTPUT}\n",
         "\n",
-        "from unsloth import apply_chat_template\n",
+        "USER:\n",
+        "{INPUT}\n",
         "\n",
+        "ASSISTANT:\n",
+        "{OUTPUT}\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "# Step 5: Apply the chat template\n",
         "dataset = apply_chat_template(\n",
         "    dataset,\n",
         "    tokenizer=tokenizer,\n",
-        "    chat_template=chat_template\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "uF35vaFZPrVX"
-      },
-      "execution_count": null,
-      "outputs": []
+        "    chat_template=chat_template,\n",
+        "    default_system_message=\"You are a helpful assistant that fixes vulnerable code.\"\n",
+        ")\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "n9Vs6GMFPyj9"
+      },
+      "outputs": [],
       "source": [
         "from trl import SFTTrainer\n",
         "from transformers import TrainingArguments\n",
@@ -191,26 +194,26 @@
         "        report_to = \"none\",\n",
         "    ),\n",
         ")"
-      ],
-      "metadata": {
-        "id": "n9Vs6GMFPyj9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "trainer_stats = trainer.train()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "6wNI14GZP2Yo"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "trainer_stats = trainer.train()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5e7lKcTLP4Z0"
+      },
+      "outputs": [],
       "source": [
         "from unsloth import FastLanguageModel\n",
         "from transformers import TextStreamer\n",
@@ -247,49 +250,49 @@
         "    max_new_tokens=256,\n",
         "    pad_token_id=tokenizer.eos_token_id,\n",
         ")\n"
-      ],
-      "metadata": {
-        "id": "5e7lKcTLP4Z0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.save_pretrained(\"lora_model\")\n",
-        "tokenizer.save_pretrained(\"lora_model\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "YffKAdLGQxZ0"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model.save_pretrained(\"lora_model\")\n",
+        "tokenizer.save_pretrained(\"lora_model\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!curl -fsSL https://ollama.com/install.sh | sh"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "gwWrZkC9RLVh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!curl -fsSL https://ollama.com/install.sh | sh"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if True: model.save_pretrained_gguf(\"model\", tokenizer,)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "LbUGKfQKQzQU"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "if True: model.save_pretrained_gguf(\"model\", tokenizer,)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "pPPLPoM1RHgQ"
+      },
+      "outputs": [],
       "source": [
         "import subprocess\n",
         "\n",
@@ -297,39 +300,50 @@
         "import time\n",
         "\n",
         "time.sleep(3)"
-      ],
-      "metadata": {
-        "id": "pPPLPoM1RHgQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(tokenizer._ollama_modelfile)\n",
-        "!ollama create unsloth_model -f ./model/Modelfile"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "hjVVC_HcROkw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(tokenizer._ollama_modelfile)\n",
+        "!ollama create unsloth_model -f ./model/Modelfile"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZimXGMe7RRzm"
+      },
+      "outputs": [],
       "source": [
         "from google.colab import files\n",
         "\n",
         "\n",
         "!zip -r lora_model.zip lora_model\n",
         "files.download(\"lora_model.zip\")"
-      ],
-      "metadata": {
-        "id": "ZimXGMe7RRzm"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNqXRh0J2vLfiUNuYh6F7A9",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
